log
Thu 25 Apr 2024 03:40:28 PM UTC: 
 hashmap.c | 23 +++++++++++++++++++----
 1 file changed, 19 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:66:9: error: ‘*mapa.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   66 |     mapa->buckets[i] = NULL;
      |     ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f0e85a9
Thu 25 Apr 2024 03:44:19 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
283d26e
Thu 25 Apr 2024 03:51:07 PM UTC: 
 hashmap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|5
total_score: 20/70
6693da8
Thu 25 Apr 2024 03:59:11 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|5
total_score: 20/70
8a95d05
Thu 25 Apr 2024 04:02:18 PM UTC: 
 hashmap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:92:1: error: control reaches end of non-void function [-Werror=return-type]
   92 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ed37d19
Thu 25 Apr 2024 04:02:37 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
8ff2144
Thu 25 Apr 2024 04:04:26 PM UTC: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  5|5
total_score: 20/70
fec6155
Thu 25 Apr 2024 04:04:58 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  5|5
total_score: 20/70
8fad3eb
Thu 25 Apr 2024 04:05:33 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|5
total_score: 20/70
c2f82e3
Thu 25 Apr 2024 04:07:50 PM UTC: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  5|5
total_score: 20/70
9583e45
Thu 25 Apr 2024 04:11:14 PM UTC: 
 hashmap.c | 15 ++-------------
 1 file changed, 2 insertions(+), 13 deletions(-)
 tests:  5|5
total_score: 20/70
b7a33f4
Thu 25 Apr 2024 04:13:02 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  7|4
total_score: 30/70
cf03730
Thu 25 Apr 2024 08:27:10 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|4
total_score: 30/70
7a0e6e7
Thu 25 Apr 2024 08:42:20 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|4
total_score: 30/70
6c5ea47
Thu 25 Apr 2024 08:42:52 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|4
total_score: 30/70
05dc1fb
Thu 25 Apr 2024 08:54:11 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|4
total_score: 30/70
3988df6
Thu 25 Apr 2024 08:57:54 PM UTC: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  7|4
total_score: 30/70
4b1bcc6
Thu 25 Apr 2024 08:58:20 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 30/70
b2bd6a0
Sat 27 Apr 2024 08:27:10 PM UTC: 
 hashmap.c | 18 +++++++++++++-----
 1 file changed, 13 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:51:30: error: assignment to ‘void *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   51 |     map->buckets[pos]->value = -1;
      |                              ^
hashmap.c:44:9: error: unused variable ‘par’ [-Werror=unused-variable]
   44 |   Pair *par = createPair(key,value);
      |         ^~~
hashmap.c: In function ‘eraseMap’:
hashmap.c:89:25: error: ‘par’ undeclared (first use in this function)
   89 |     map->buckets[pos] = par;
      |                         ^~~
hashmap.c:89:25: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
edde7df
Sat 27 Apr 2024 08:27:26 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:50:30: error: assignment to ‘void *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   50 |     map->buckets[pos]->value = -1;
      |                              ^
hashmap.c: In function ‘eraseMap’:
hashmap.c:88:25: error: ‘par’ undeclared (first use in this function)
   88 |     map->buckets[pos] = par;
      |                         ^~~
hashmap.c:88:25: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
bf10626
Sat 27 Apr 2024 08:28:15 PM UTC: 
 hashmap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:89:30: error: assignment to ‘void *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   89 |     map->buckets[pos]->value = -1;
      |                              ^
cc1: all warnings being treated as errors
Compilation failed
03eee5e
Sat 27 Apr 2024 08:28:43 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
cf67ad2
Sat 27 Apr 2024 08:29:38 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|4
total_score: 30/70
cb88471
Sat 27 Apr 2024 08:29:58 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 30/70
75c715b
Sat 27 Apr 2024 08:31:08 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ee88c19
Sat 27 Apr 2024 08:31:45 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
77be872
Sat 27 Apr 2024 08:33:40 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 30/70
7bd1517
Sat 27 Apr 2024 08:34:17 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
86039b8
Sat 27 Apr 2024 08:35:33 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|3
total_score: 40/70
947b98f
Sat 27 Apr 2024 08:37:00 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  11|3
total_score: 40/70
8ba64db
Sat 27 Apr 2024 08:39:41 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:83:9: error: unused variable ‘par’ [-Werror=unused-variable]
   83 |   Pair *par = createPair(NULL,NULL);
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
b6faab0
Sat 27 Apr 2024 08:39:50 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|4
total_score: 30/70
7c29480
Sat 27 Apr 2024 08:40:18 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|3
total_score: 40/70
3861660
Sat 27 Apr 2024 08:41:33 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|3
total_score: 40/70
0b00404
Sat 27 Apr 2024 08:42:08 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  12|3
total_score: 40/70
08e0fb1
Sat 27 Apr 2024 08:42:32 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|3
total_score: 40/70
eb3f36d
Sat 27 Apr 2024 08:42:44 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|3
total_score: 40/70
a517757
Sat 27 Apr 2024 08:46:12 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:125:17: error: expected ‘;’ before ‘:’ token
  125 |   map->current++:
      |                 ^
      |                 ;
hashmap.c:127:1: error: control reaches end of non-void function [-Werror=return-type]
  127 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b0b2383
Sat 27 Apr 2024 08:46:21 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|3
total_score: 40/70
bcb4dce
Sat 27 Apr 2024 08:47:11 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  12|3
total_score: 40/70
b9e0c05
Sat 27 Apr 2024 09:00:03 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a22d108
Sat 27 Apr 2024 09:12:20 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:127:88: error: expected ‘)’ before ‘map’
  127 |   while((map->buckets[map->current] == NULL || map->buckets[map->current]->key == NULL) map->current <= map->capacity) map->current++;
      |        ~                                                                               ^~~~
      |                                                                                        )
Compilation failed
79b8af3
